# OpenVDBForUnity

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  README.md  README_ja.md  appveyor.yml  build.py  conanfile.py
.travis/: install.sh
OpenVDBForUnity/Assets/Common/: HDRenderPipelineAsset.asset  Volume.asset
OpenVDBForUnity/Assets/Editor/PackageBuild/: LibraryDownloader.cs  PackageBuild.asmdef  PackageBuilder.cs  PackageMenu.cs  PackageUploader.cs  UnityCloudBuildTrigger.cs  jp.kazuki.OpenVDB.PackageBuild.asmdef
OpenVDBForUnity/Assets/OpenVDB/: OpenVDBAssembly.asmdef
OpenVDBForUnity/Assets/OpenVDB.Tests/: Const.cs  OpenVDB.Tests.asmdef  OpenVDBAPITest.cs  OpenVDBImporterTest.cs  PackageBuildTest.cs  jp.kazuki.OpenVDB.Tests.asmdef
OpenVDBForUnity/Assets/Scenes/: EmptyScene.unity  PostFx.asset  Test.unity
OpenVDBForUnity/Assets/Settings/: HDRenderPipelineAsset.asset
OpenVDBForUnity/ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  InputManager.asset  Physics2DSettings.asset  PresetManager.asset  ProjectSettings.asset  QualitySettings.asset
OpenVDBForUnity/conan_package/license/: LICENSE
Plugin/: CMakeLists.txt
Plugin/openvdbi/: CMakeLists.txt  openvdbi.h  pch.h
Plugin/openvdbi/Foundation/: IntrusiveArray.h  Logger.cpp  Logger.h
Plugin/openvdbi/Importer/: OpenVDBImporter.cpp  OpenVDBImporter.h  oiContext.cpp  oiContext.h  oiInternal.h  oiObject.cpp  oiObject.h  oiVolume.cpp  oiVolume.h
test_package/: CMakeLists.txt  conanfile.py  main.cpp
(+42 files in other folders)
